// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/tool/generateDefinitionContent generate definition class 1`] = `
"export class ApiResponse {
    public code?: number;
    public type?: string;
    public message?: string;
}
"
`;

exports[`src/tool/generateDefinitionContent generic type 1`] = `
"export class ApiResponse<DataVO> {
    public code?: number;
    public type?: string;
    /** 数据列表 */
    public entities?: Array<DataVO>;
    public message?: string;
}
"
`;
